# flatbread

./: .gitignore  MANIFEST.in  README.md  config.defaults.json  environment.yml  pyproject.toml  readme.md  setup.py  test_table.html
docs/source/: conf.py  config.rst  index.rst  modules.rst  readme.rst
flatbread/: __init__.py  accessor.py  axes.py  chaining.py  columns.py  config.defaults.json  config.json  config.py  levels.py  percentages.py  pivot.py  rows.py  tooling.py  types.py  version.py
flatbread/accessors/: dataframe.py  series.py
flatbread/agg/: aggregation.py  totals.py
flatbread/aggregate/: __init__.py  aggfunc.py  percentages.py  totals.py
flatbread/config/: __init__.py  config.defaults.json  service.py
flatbread/core/: assign.py  drop.py  load.py  select.py
flatbread/format/: __init__.py  style.py
flatbread/helpers/: axes.py  levels.py
flatbread/io/: excel.py
flatbread/plot/: format.py  trendline.py
flatbread/present/: format.py  trendline.py
flatbread/render/: config.py  constants.py  display.py  pandas_to_table_spec.py  tablespec.py  template.jinja.html  template.py
flatbread/style/: __init__.py  _helpers.py  generic.py  levels.py  pandas.original.tpl  pandas.tpl  styler.py  subtotals.py  table.py  totals.py
flatbread/testing/: dataframe.py
flatbread/utils/: __init__.py  axes.py  levels.py  log.py  readout.py  repper.py  sanity.py
pita/: __init__.py  config.py
pita/core/: __init__.py  assign.py  drop.py  load.py  select.py
pita/present/: trendline.py
tests/: build_test_dfs.py  test_axes.py  test_levels.py
(+46 files in other folders)
