[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flatbread"
version = "0.1.1"
description = "Pandas extension for aggregation and tabular display"
readme = "readme.md"
requires-python = ">=3.10"
license = { file = "license.md" }
authors = [
    { name = "L.C. Vriend", email = "vanboefer@gmail.com" }
]
dependencies = [
    "pandas>=2.0.0",
    "jinja2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pandas", "aggregation", "tables", "display", "dataframe", "extension"]

[project.urls]
Homepage = "https://github.com/lcvriend/flatbread"
